# MiniClaw

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SOUL.md  USER.md  docker-compose.yaml  miniclaw.sh  pyproject.toml
miniclaw/: __init__.py  __main__.py  bootstrap.py
miniclaw/capabilities/: __init__.py  contracts.py  index.py  render.py
miniclaw/channels/: __init__.py  access.py  bridge.py  contracts.py  loop.py  markdown.py
miniclaw/cli/: __init__.py  app.py  trace_renderer.py
miniclaw/commands/: __init__.py  decorator.py  registry.py
miniclaw/config/: __init__.py  settings.py
miniclaw/cron/: __init__.py  service.py  types.py
miniclaw/heartbeat/: __init__.py  service.py
miniclaw/mcp/: __init__.py  adapters.py  clients.py  config.py  contracts.py  registry.py
miniclaw/memory/: __init__.py  chunker.py  compression_promote.py  consolidation.py  context.py  decay.py  embedding.py  extract.py  files.py  indexer.py  retriever.py  rewrite.py
miniclaw/observability/: __init__.py  cache_event.py  (+6 more)
scripts/: docker-entrypoint.sh
tests/: test_bootstrap_capabilities.py  test_classify_llm.py  test_cli_graph.py  test_cli_trace.py  test_graph_routing.py  test_prompt_context.py  test_prompting_context.py  test_runtime_agent.py  test_runtime_classification.py  test_runtime_executor.py  test_runtime_graph.py  test_runtime_memory_consolidation.py  test_runtime_planner.py  test_runtime_tool_loop.py  test_spawn_subagent_tool.py  test_subagent.py  test_tool_visibility.py
tools/: README.md  TRACE_SCHEMA.md  sample_trace.jsonl  trace_view.py
(+72 files in other folders)
